src/skills/file_read/snapshots/axinite__skills__file_read__tests__skill_read_file_error_non_inline_asset.snap
---
source: src/skills/file_read/tests.rs
expression: "&response"
---
{
  "skill": "deploy-docs",
  "path": "assets/logo.png",
  "error": {
    "code": "non_inline_asset",
    "message": "Phase 1 does not return binary or oversized assets inline.",
    "metadata": {
      "size": 8,
      "mime_type": "image/png",
      "fetch_hint": "Treat this as a passive asset; request only referenced text files in phase 1."
    }
  }
}
