src/skills/file_read/snapshots/axinite__skills__file_read__tests__skill_read_file_error_path_not_readable.snap
---
source: src/skills/file_read/tests.rs
expression: "&response"
---
{
  "skill": "deploy-docs",
  "path": "../secret",
  "error": {
    "code": "path_not_readable",
    "message": "File is not available for reading"
  }
}
