src/skills/file_read/snapshots/axinite__skills__file_read__tests__skill_read_file_error_unknown_skill.snap
---
source: src/skills/file_read/tests.rs
expression: "&response"
---
{
  "skill": "deploy-docs",
  "path": "references/usage.md",
  "error": {
    "code": "unknown_skill",
    "message": "Skill is not loaded or available for reading"
  }
}
