src/skills/file_read/snapshots/axinite__skills__file_read__tests__skill_read_file_success.snap
---
source: src/skills/file_read/tests.rs
expression: "&response"
---
{
  "skill": "deploy-docs",
  "path": "references/usage.md",
  "mime_type": "text/markdown",
  "content": "# Usage\n"
}
